# nallely-midi

./: .gitignore  CHANGELOG.md  LICENSE  Minilab3.py  README.md  arise  autogen.py  dev.bash  external_scope.py  force_nogil.py  format.bash  generator.py  index.html  minilab.py  modules_doc_generator.py  nallely-midi  nallely-windows.spec  nallely.spec  package.json  prepare-trevor-ui.bash  pyproject.toml  requirements.txt  rss.xml  setup.py  sitemap.xml  spiral.html  trevor.py  visual-spiral.py
.github/workflows/: arise-deploy.yml  build-linux-x64.yml  build-macos-arm64.yml  build-macos-x64.yml  build-trevor.yml  build-windows-x64.yml  build-windows-x86.yml  python-package.yml
ai_generated_devices/: README.md  claude_tests.py  gpt41_tests.py
arise-source/: index.md  robots.txt
arise-source/config/: arise.conf  content_header.html  footer.html  header.html  highlight.css  main-dark.css  main.css
arise-source/fonts/: LICENSE.amigafonts
arise-source/modules/: webcam.html
arise-source/news/: index.md
arise-source/posts/: index.md
config/: main-dark.css  main.css
configs/: Minilab3.py  Minilab3.yaml  NTS-1.yaml  amsynth-controller  amsynth.py  amsynth.yaml  behringer-jt4000m.py  behringer-jt4000m.yaml  behringer-provs-mini.py  behringer-provs-mini.yaml  comol.py  hydrogen.conf  hydrogen.py  hydrogen.yaml  lisa-pico.yaml  lisa_pico.py  minilogue.yaml  roland-s1.yaml  roland_s1.py  vija-pico.yaml  vija_pico.py
docs/: develop-neuron.md  existing-modules.md  gui-trevorui.md  ideas.md  main.md
experiments/: audio2midi.py  harmonizer.py  mono2poly.py  random_device_config.py  random_patchers.py  scheduler.py
libs/: PORTING.md  README.md
libs/C/: Makefile  README.md  nallely-websocket.c  nallely-websocket.h
libs/js/: README.md  audio-analysis.html  example.html  finger-tracking.html  gb.html  gps.html  nallely-websocket.js  webcam.html
libs/llms/: README.md  nallely-llm-skill.md
libs/python/: README.md  nallely_connector.py  trevor_client.py
libs/ruby/: README.md  echo-example.rb  nallely_connector.rb  trevor_client.rb
libs/supercollider/: SynthProxy.sc
nallely/: __init__.py  cli.py  clocks.py  core.py  devices.py  eg.py  filters.py  generator.py  lfos.py  links.py  logicals.py  modules.py  newmodule.py  osc_bus.py  sequencer.py  session.py  shifter.py  switchs.py  trevor.py  utils.py  websocket_bus.py
nallely/codegen/: __init__.py  midi_module_generator.py  subgraph_to_code.py  virtual_module_autogen.py
nallely/core/: __init__.py  bridge_device.py  bridge_device.yaml  keyboard_device.py  links.py  midi_device.py  parameter_instances.py  scaler.py  virtual_device.py  world.py
nallely/devices/: __init__.py  minilogue.py  mpd32.py  nts1.py
nallely/distributed/: __init__.py  remote_ws_connector.py
news/: index.html
posts/: index.html
preset-examples/: VisuScope1.nly
rpi-files/: install-nallely.sh  serve-trevor-ui.bash  start-nallely.bash  update-nallely.bash
supercollider/: nallelyOCS.sc
tests/: fixtures.py  test_codegen.py  test_lfo_arithmetic.py  test_mappings.py  test_meta_devices.py  test_oscbus.py  test_scalers.py  test_session.py  test_virtual_devices.py  test_websocketbus.py
trevor/: index.html  package.json  tsconfig.app.json  vite.config.ts
trevor-neutralino/: neutralino.config.json
trevor/src/: App.css  (+5 more)
visuals/: cloud.html  cubes.html  flower.html  flower2.html  multi2.html  psyche.html  spiral.html  tunnel.html
(+125 files in other folders)
